--- a/markdown_css/pandoc.css
+++ b/markdown_css/pandoc.css
@@ -9,7 +9,7 @@ body {
     border-right: 1px solid black;
     color: black;
     font-family: Verdana, sans-serif;
-    font-size: 100%;
+    font-size: 10pt;
     line-height: 140%;
     color: #333;
 }
