--- a/pandoc/notes.css
+++ b/pandoc/notes.css
@@ -1,12 +1,12 @@
-/* Credit: https://gist.github.com/ERGZ/055899cd99960d8664dd779a71f34443 */
+/* Inspired by: https://gist.github.com/ERGZ/055899cd99960d8664dd779a71f34443 */
 
 body {
     margin: auto;
     padding-right: 1em;
     padding-left: 1em;
     max-width: 50em;
-    border-left: 1px solid black;
-    border-right: 1px solid black;
+    border-left: 1px solid lightgrey;
+    border-right: 1px solid lightgrey;
     color: black;
     font-family: Verdana, sans-serif;
     font-size: 10pt;
@@ -22,6 +22,9 @@ pre {
     padding: 0.2em 0.4em;
     border: 1px dotted gray;
 }
+pre > code {
+  padding: 0
+}
 code {
     padding: 0.0em 0.3em;
 }
@@ -34,8 +37,10 @@ h1 a, h2 a, h3 a, h4 a, h5 a {
 }
 h1, h2, h3, h4, h5 { font-family: verdana;
                      font-weight: bold;
-                     border-bottom: 1px dotted black;
+                     border-bottom: 1px solid lightgrey;
+                     padding-bottom: 0.2em;
                      color: #7a5ada; }
+h2, h3, h4, h5 { margin-top: 1em; }
 h1 {
         font-size: 130%;
 }
@@ -90,4 +95,13 @@ td,
 th {
   padding: .25rem .5rem;
   border: 1px solid #e5e5e5;
+}
+
+figure {
+  margin: 0 0 15px 0;
+}
+img {
+  display: block;
+  max-width: 620px;
+  margin: auto;
 }
