--- a/pandoc/notes.css
+++ b/pandoc/notes.css
@@ -11,8 +11,10 @@ body {
     font-family: Verdana, sans-serif;
     font-size: 10pt;
     line-height: 140%;
-    color: #333;
+    color: black;
+    background-color: #f2f2f2;
 }
+
 pre, code {
     font-family: monospace;
     color: #1111111;
@@ -28,6 +30,7 @@ pre > code {
 code {
     padding: 0.0em 0.3em;
 }
+
 a {
     color: blue;
     /* Add ellipsis to long links. */
@@ -40,13 +43,12 @@ a {
 }
 h1 a, h2 a, h3 a, h4 a, h5 a {
     text-decoration: none;
-    color: #7a5ada;
 }
 h1, h2, h3, h4, h5 { font-family: verdana;
                      font-weight: bold;
                      border-bottom: 1px solid lightgrey;
                      padding-bottom: 0.2em;
-                     color: #7a5ada; }
+                     color: black; }
 h2, h3, h4, h5 { margin-top: 1em; }
 h1 {
         font-size: 130%;
@@ -86,12 +88,6 @@ dd p {
         margin-top: 0;
 }
 
-#footer {
-        padding-top: 1em;
-        font-size: 70%;
-        color: gray;
-        text-align: center;
-        }
 table {
   margin-bottom: 1rem;
   width: 100%;
@@ -104,9 +100,6 @@ th {
   border: 1px solid #e5e5e5;
 }
 
-figure {
-  margin: 0 0 15px 0;
-}
 img {
   display: block;
   max-width: 620px;
