docs.css: Don't wrap code!

--- a/pandoc/docs.css
+++ b/pandoc/docs.css
@@ -43,6 +43,8 @@ a, a:visited {
 pre, code {
   padding: 0.3em;
   font-family: monospace;
+  white-space: nowrap;
+  overflow: auto;
   background-color: #ECECEC;
   border-radius: 3px;
 }
