--- a/pandoc/docs.css
+++ b/pandoc/docs.css
@@ -1,143 +1,169 @@
-body {
-  width: 600px;
-  margin: auto;
-  color: black;
-  font-size: 15px;
-  font-family: Verdana, sans-serif;
-  line-height: 140%;
-}
+/* Based on Pandoc's default HTML5 template (`pandoc -D html5`). */
 
-h1 { font-size: 130%; }
-h2 { font-size: 120%; }
-h3 { font-size: 110%; }
-h1, h2, h3 {
-  margin-top: 1.5em;
-  padding-left: 0.5em;
-  padding-bottom: 0.5em;
-  border-bottom: 1px solid black;
-}
-h4, h5, h6 {
-  font-size: 100%;
-  font-style: italic;
-}
+/* === basic === {{{ */
 
-hr {
-  border: 0;
-  border-bottom: 2px dashed #ccc;
-  background: #999;
-}
-
-a, a:visited {
-  color: #0000EE;
-}
-a:hover {
-  text-decoration: underline;
-}
-
-pre, code {
-  padding: 0.3em;
-  font-family: monospace;
-  background-color: #ECECEC;
-  border-radius: 3px;
-}
-pre > code { padding: 0 }
-code { padding: 0em 0.3em; }
-
-blockquote {
-  margin: 0;
-  padding: 0.1em 1em;
-  background-color: #ECECEC;
-  border-left: 10px solid lightgrey;
-}
-
-dt {
-  font-weight: bold;
-}
-
-img {
-  display: block;
-  max-width: 500px;
-  margin: auto;
-  border-radius: 3px;
-}
-
-figure { margin: 0 0 20px 0; }
-figcaption {
-  padding: 0.2em;
-  font-style: italic;
-  text-align: center;
-}
-
-/* --- Pandoc specific --- */
-
-#TOC {
-  border-top: 2px solid black;
-  border-bottom: 2px solid black;
-}
-
-.title {
-  border: none;
-}
-
-.math.inline {
-  padding: 0em 0.3em;
-}
-
-/* --- Misc --- */
-
-.math.inline, .MathJax_Display {
-  background-color: #ECECEC;
-  border-radius: 3px;
-}
-
-.MathJax_Display {
-  padding: 0.4em 0;
-}
-
-/* --- screen specific --- */
-
-@media screen {
-  a {
-    /* Add ellipsis to long links. */
-    display: inline-block;
-    max-width: 500px;
-    white-space: nowrap;
-    vertical-align: top; /* Preserves list item alignment. */
-    overflow: hidden;
-    text-decoration: none;
-    text-overflow: ellipsis;
+  body {
+    width: 600px;
+    margin: 0 auto 2em auto;
+    color: black;
+    font-size: 15px;
+    font-family: Verdana, sans-serif;
+    line-height: 140%;
   }
 
-  pre, code, .MathJax_Display {
-    white-space: pre;
+  p {
+    margin: 1em 0;
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    padding: 0;
+  }
+  h1, h2, h3 {
+    margin-top: 1.5em;
+    padding-left: 0.5em;
+    padding-bottom: 0.5em;
+    border-bottom: 1px solid black;
+  }
+  h1 { font-size: 130%; }
+  h2 { font-size: 120%; }
+  h3 { font-size: 110%; }
+  h4, h5, h6 {
+    font-size: 100%;
+    font-style: italic;
+  }
+
+  hr {
+    border: 0;
+    border-bottom: 2px dashed #ccc;
+    background: #999;
+  }
+
+  a, a:visited {
+    color: #0000EE; /* blue */
+  }
+
+  blockquote {
+    margin: 0;
+    padding: 0.1em 1em;
+    background-color: #ECECEC;
+    border-left: 10px solid lightgrey;
+  }
+
+  dt {
+    font-weight: bold;
+  }
+
+  img {
+    display: block;
+    max-width: 500px;
+    margin: 1em auto 0 auto;
+    border-radius: 3px;
+  }
+
+  figcaption {
+    margin-top: 0.25em;
+    font-style: italic;
+    text-align: center;
+  }
+
+/* }}} */
+
+/* === code === {{{ */
+
+  .sourceCode, pre, code {
+    font-family: monospace;
+    background-color: #ECECEC;
+    border-radius: 3px;
+  }
+  pre {
+    padding: 0.3em;
     overflow-y: hidden;
     overflow-x: auto;
   }
-}
-
-/* --- print specific --- */
-
-@media print {
-  body {
-    width: 700px;
-    font-size: 13px;
+  pre > code {
+    padding: 0;
+    white-space: pre;
   }
+  code { padding: 0em 0.3em; } /* inline code */
+
+/* }}} */
+
+/* === math === {{{ */
+
+  .math.inline, .MathJax_Display {
+    background-color: #ECECEC;
+    border-radius: 3px;
+  }
+
+  .math.inline {
+    padding: 0em 0.3em;
+  }
+
+  .MathJax_Display {
+    padding: 0.4em 0;
+  }
+
+/* }}} */
+
+/* === Pandoc === {{{ */
 
   #TOC {
-    display: none;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
   }
 
-  pre.sourceCode {
-    position: relative;
-    height: 2em;
-    overflow: hidden;
+  .title {
+    border: none;
   }
-  pre.sourceCode:after {
-    content: 'hidden for print';
-    position: absolute;
-    top: 0; right: 0; bottom: 0; left: 0;
-    text-align: center;
-    padding: 0.6em 0;
-    background-color: #ECECEC;
+
+/* }}} */
+
+/* === screen specific === {{{ */
+
+  @media screen {
+    a:not(.sourceLine) {
+      display: inline-block;
+      max-width: 500px;
+      white-space: nowrap;
+      vertical-align: top; /* Preserves list item alignment. */
+      overflow: hidden;
+      text-overflow: ellipsis;
+      text-decoration: none;
+    }
+    a:not(.sourceLine):hover {
+      text-decoration: underline;
+    }
   }
-}
+
+/* }}} */
+
+/* === print specific === {{{ */
+
+  @media print {
+    body {
+      width: 700px;
+      font-size: 13px;
+    }
+
+    #TOC {
+      display: none;
+    }
+
+    /* hide code */
+    .sourceCode {
+      position: relative;
+      height: 2em;
+      overflow: hidden;
+    }
+    .sourceCode:after {
+      content: 'hidden for print';
+      position: absolute;
+      top: 0; right: 0; bottom: 0; left: 0;
+      text-align: center;
+      padding: 0.6em 0;
+      background-color: #ECECEC;
+    }
+  }
+
+/* }}} */
