--- a/pandoc/docs.css
+++ b/pandoc/docs.css
@@ -50,9 +50,9 @@
     border-left: 10px solid lightgrey;
   }
 
-  dt {
-    font-weight: bold;
-  }
+  dt { font-weight: bold; }
+
+  table { margin: auto; }
 
   img {
     display: block;
