--- a/pandoc/docs.css
+++ b/pandoc/docs.css
@@ -1,186 +1,63 @@
-/* Based on Pandoc's default HTML5 template (`pandoc -D html5`). */
+.post {
+  margin: 20px auto;
+}
 
-/* === basic === {{{ */
+/* === Pandoc === {{{ */
 
-  body {
-    width: 600px;
-    margin: 0 auto 2em auto;
-    color: black;
-    font-size: 15px;
-    font-family: Verdana, sans-serif;
-    line-height: 140%;
-  }
-
-  p {
-    margin: 1em 0;
-  }
-
-  /* === headings === {{{ */
-
-  h1, h2, h3, h4, h5, h6 {
-    margin: 1.2em 0 0.4em 0;
-    padding: 0;
-  }
-
-  h1 {
-    padding-bottom: 0.4em;
-    border-bottom: 1px solid black;
-  }
-
-  h1 { font-size: 148%; }
-  h2 { font-size: 136%; }
-  h3 { font-size: 124%; }
-  h4, h5, h6 {
-    font-size: 112%;
-    font-style: italic;
-  }
-
-  /* Pound marks for indicating header depth. */
-  h1:after, h2:after, h3:after, h4:after, h5:after, h6:after {
-    float: right;
-    color: #ECECEC;
-  }
-  h1:after { content: '#'; }
-  h2:after { content: '##'; }
-  h3:after { content: '###'; }
-  h4:after { content: '####'; }
-  h5:after { content: '#####'; }
-  h6:after { content: '######'; }
-
-  /* }}} */
-
-  hr {
-    border: 0;
-    border-bottom: 2px dashed #ccc;
-    background: #999;
-  }
-
-  a, a:visited {
-    color: #0000EE; /* blue */
-  }
-
-  blockquote {
-    margin: 0;
-    padding: 0.1em 1em;
-    background-color: #ECECEC;
-    border-left: 10px solid lightgrey;
-  }
-
-  dt { font-weight: bold; }
-  em { color: #af3a03; }
-
-  table { margin: auto; }
-
-  img {
-    display: block;
-    max-width: 500px;
-    margin: 1em auto 0 auto;
-    border-radius: 3px;
-  }
-
-  figcaption {
-    margin-top: 0.25em;
-    font-style: italic;
-    text-align: center;
-  }
+#table-of-contents {
+  padding-top: 10px;
+  margin-bottom: 20px;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+}
 
 /* }}} */
 
 /* === code === {{{ */
 
-  .sourceCode, pre, code {
-    font-family: monospace;
-    background-color: #ECECEC;
-    border-radius: 3px;
-  }
-  pre {
-    padding: 0.3em;
-    overflow-y: hidden;
-    overflow-x: auto;
-  }
-  pre > code {
-    padding: 0;
-    white-space: pre;
-  }
-  code { padding: 0em 0.3em; } /* inline code */
+/* Overrides to match the look of the 'Code' section at
+ * https://brianustas.com/typography.
+ * Why different? My website doesn't use Pandoc for syntax highlighting.
+ */
 
-/* }}} */
+code.sourceCode {
+  white-space: pre-wrap;
+}
 
-/* === math === {{{ */
-
-  .math.inline, .MathJax_Display {
-    background-color: #ECECEC;
-    border-radius: 3px;
-  }
-
-  .math.inline {
-    padding: 0em 0.3em;
-  }
-
-  .MathJax_Display {
-    padding: 0.4em 0;
-  }
-
-/* }}} */
-
-/* === Pandoc === {{{ */
-
-  #TOC {
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
-  }
-
-  .title {
-    border: none;
-  }
-
-/* }}} */
-
-/* === screen specific === {{{ */
-
-  @media screen {
-    a:not(.sourceLine) {
-      display: inline-block;
-      max-width: 500px;
-      white-space: nowrap;
-      vertical-align: top; /* Preserves list item alignment. */
-      overflow: hidden;
-      text-overflow: ellipsis;
-      text-decoration: none;
-    }
-    a:not(.sourceLine):hover {
-      text-decoration: underline;
-    }
-  }
+.sourceCode a, .sourceCode span {
+  line-height: 1.5rem;
+  font-weight: 400 !important;
+}
 
 /* }}} */
 
 /* === print specific === {{{ */
 
-  @media print {
-    body {
-      width: 700px;
-      font-size: 13px;
-    }
-
-    #TOC {
-      display: none;
-    }
-
-    /* hide code */
-    .sourceCode {
-      position: relative;
-      height: 2em;
-      overflow: hidden;
-    }
-    .sourceCode:after {
-      content: 'hidden for print';
-      position: absolute;
-      top: 0; right: 0; bottom: 0; left: 0;
-      text-align: center;
-      padding: 0.6em 0;
-      background-color: #ECECEC;
-    }
+@media print {
+  body {
+    width: 700px;
+    font-size: 13px;
   }
+
+  #table-of-contents {
+    display: none;
+  }
+
+  /* hide code */
+  .sourceCode {
+    position: relative;
+    height: 2rem;
+    overflow: hidden;
+  }
+  .sourceCode:after {
+    content: 'hidden for print';
+    position: absolute;
+    top: 0; right: 0; bottom: 0; left: 0;
+    text-align: center;
+    padding: 0.4rem 0;
+    background-color: white;
+    border: 1px dashed black;
+  }
+}
 
 /* }}} */
