docs.css: Break long URLs so they don't overflow.

--- a/pandoc/docs.css
+++ b/pandoc/docs.css
@@ -11,6 +11,10 @@
   border-bottom: 2px solid black;
 }
 
+a.uri {
+  word-break: break-all;  /* Break long URLs so they don't overflow. */
+}
+
 /* }}} */
 
 /* === code === {{{ */
