--- a/pandoc/docs.css
+++ b/pandoc/docs.css
@@ -24,28 +24,16 @@ a.uri {
 /* === print specific === {{{ */
 
 @media print {
+  body {
+    padding: 0;
+  }
+
   .post {
     margin: 0;
   }
 
   #table-of-contents {
     display: none;
-  }
-
-  /* hide code */
-  .sourceCode {
-    position: relative;
-    height: 2rem;
-    overflow: hidden;
-  }
-  .sourceCode:after {
-    content: 'hidden for print';
-    position: absolute;
-    top: 0; right: 0; bottom: 0; left: 0;
-    text-align: center;
-    padding: 0.4rem 0;
-    background-color: white;
-    border: 1px dashed black;
   }
 }
 
